# moveit2

moveit_ros/manipulation/: CMakeLists.txt  package.xml
moveit_ros/manipulation/move_group_pick_place_capability/: CMakeLists.txt
moveit_ros/manipulation/pick_place/: CMakeLists.txt
moveit_ros/manipulation/pick_place/include/moveit/pick_place/: manipulation_plan.h  pick_place.h  plan_stage.h
moveit_ros/manipulation/pick_place/src/: approach_and_translate_stage.cpp  manipulation_pipeline.cpp  pick.cpp  pick_place.cpp  pick_place_params.cpp  place.cpp  plan_stage.cpp  reachable_valid_pose_filter.cpp
moveit_ros/planning/plan_execution/: CMakeLists.txt
moveit_ros/planning_interface/move_group_interface/include/moveit/move_group_interface/: move_group_interface.h
moveit_ros/planning_interface/move_group_interface/src/: move_group_interface.cpp
