<package format="2">
  <name>moveit_ros_manipulation</name>
  <version>2.2.1</version>
  <description>Components of MoveIt used for manipulation</description>

  <author email="isucan@google.com">Ioan Sucan</author>
  <author email="robot.moveit@gmail.com">Sachin Chitta</author>

  <maintainer email="me@v4hn.de">Michael Görner</maintainer>
  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt Release Team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>moveit_common</build_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
 -->
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <depend>ament_index_cpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>action_msgs</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen</depend>
  <!-- <depend>moveit_plan_execution</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
